# androcles

./: .gitignore  1-1_centurion.md  1-2_prisoners_and_lavinia.md  1-3_centurion_and_lavinia.md  AGENTS.md  Androcles_Captain_sides.md  act-1.md  act-2.md  androcles.txt  audio_splitter.py  audiocheck  block  captain.md  main  norm  play-config.yaml  pyproject.toml  quince  requirements.in  requirements.txt  run_tests.py  script_builder.py  shotpath
audio/: recording_tips.md
clean/: blocks.py  build.py  clean.py  format.md  inxample.txt  narration.py  paragraphize.py  paragraphs.py  paragraphs.txt  roles.py  src.txt
cuemaster/: README.md  THIRD_PARTY_NOTICES.md  USER_GUIDE.md  index.html  package-lock.json  package.json  playwright.config.ts  playwright.static.config.ts  vite.config.ts
cuemaster-v2/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/: quince_ffmpeg_rubberband_installation.md
linerecorder/: README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js  vite.config.ts
packaging/: stager.spec
planning/: README.md  app_manifest.md  cueline-design.md  deployment.md  deployment_implementation_plan.md  deployment_quick_start.md  harden.md  mobile_app_implementation_plan.md  quince-workflow.md  quince_cli_design.md  quince_production_guide.md  static_actor_app_deployment.md  terminology.md  webapp_refactor_implementation_plan.md
playtext/: blocks.py  clean.py  narration.py  paragraphs.py  paragraphs.txt  paths.py  roles.py  src.txt
src/: block.py  (+96 more)
(+672 files in other folders)
